--- a/Link.html
+++ b/Link.html
@@ -8,10 +8,10 @@
 <body>
         <h1>Linkar páginas</h1>
 
-        <a href="modelo/cores.html">Cores</a>
+        <a href="modelos/cores.html">Cores</a>
 
         <a href="cores.html">Cores</a>
-        
+
         <a href="../cores.html">Cores</a>
 
 
