--- a/Link.html
+++ b/Link.html
@@ -12,7 +12,7 @@
 
         <a href="cores.html">Cores</a>
 
-        <a href="../cores.html">Cores</a>
+        <a href="..link.html">Cores</a>
 
 
 </body>
