--- a/tabela.html
+++ b/tabela.html
@@ -65,6 +65,8 @@
             <td>col 5</td>
         </tr>
     </table>
+    <br><br><br>
+    <b><em>Bruno Vitor dos Santos</em></b><br>
 
 </body>
 </html>
