--- a/textos.html
+++ b/textos.html
@@ -13,8 +13,10 @@
     <code>Pedaço de um código de computador - Computer</code><br>
     <samp>Exemplo de saída de um programa computador - Sample</samp><br>
     <kbd>Entrada de teclado - Keyboard</kbd><br>
-    <var>Variável</var><br>
+    <var>Variável</var><br><br><br><br>
 
+    <br><br><br>
+    <b><em>Bruno Vitor dos Santos</em></b><br>
 
 
 
