--- a/tabela01.html
+++ b/tabela01.html
@@ -74,7 +74,7 @@
 </br>
 </br>
 <br><br><br>
-<b><em>Bruno Vitor dos Santos</em></b><br>
+<b><em>Bruno Vitor dos Santos...</em></b><br>
 
 </body>
 </html>
