--- a/BrunoSantosLayOut/templateHTML_CSS.html
+++ b/BrunoSantosLayOut/templateHTML_CSS.html
@@ -26,8 +26,8 @@
     </div>
 
     <div id="rodape">
-        AQUI FICA O RODAPÉ DO TEMPLATE
-        BRUNO VITOR DOS SANTOS
+    AQUI FICA O RODAPÉ DO TEMPLATE<br>
+    BRUNO VITOR DOS SANTOS
     </div>
 </body>
 </html>
