--- a/form03.html
+++ b/form03.html
@@ -16,7 +16,7 @@
     </label>
     <br/>
     <label>Mensagem
-        <textarea name="mensagem" required  /></textarea>
+        <textarea name="mensagem" required></textarea>
     </label>
     <br/>
     <br/>
